[package]
name = "server"
version = "0.1.0"
authors = ["Marcus Buffett <marcusbuffett@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_contrib = "0.4.5"
sled = "0.34.4"
sled-extensions = { version = "0.2.0", features = ["bincode"]}
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
thiserror = "1.0.21"
reqwest = { version = "0.10.9", features = ["blocking", "json"] }
dotenv = "0.15.0"
nanoid = "0.3.0"
